--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,7 +37,7 @@ lifecycle_viewmodel = "2.7.0"
 compose_compiler = "1.5.12"
 compose_bom = "2024.04.01"
 compose_activity = "1.9.0"
-jb_compose_compiler = "1.6.2"
+jb_compose_compiler = "1.6.10-beta03"
 compose_windowsizeclass = "0.5.0"
 
 # Koin
